2010-03-03  Atsushi Enomoto  <atsushi@ximian.com>

	* docs/Makefile : drop Mono.Data.SqliteClient.

2010-02-28  Miguel de Icaza  <miguel@novell.com>

	* docs/Makefile: install during the 4.0 build now.

	* Makefile: Process `docs' now on the 4.0 profile.

2010-01-25  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : finally System.ServiceModel.dll is on the centum tests.

2009-10-01  Marek Safar  <marek.safar@gmail.com>

	* Makefile: Removed net_1_1 bootstrap.

2009-09-07  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile: add some WCF assemblies to centum_tests.

2009-07-21  Jb Evain  <jbevain@novell.com>

	* Makefile: specify bootstrap and SUBDIRS for the monotouch profile.

2009-07-16  Raja R Harinath  <harinath@hurrynot.org>

	Improve coarse-grain parallelism in the build
	* Makefile (_boot_:net_2_0_bootstrap): Depend on
	'net_1_1_bootstrap' profile, rather than 'net_1_1'.

2009-07-10  Atsushi Enomoto  <atsushi@ximian.com>

	* nunit20 : removed old framework.

2009-06-07  Marek Safar  <marek.safar@gmail.com>

	* Makefile: Add net_4_0* profiles.

2009-02-24  Jonathan Pryor  <jpryor@novell.com>

	* docs/Makefile: Remove and don't install nunit-docs.source.  As
	  Atsushi Enomoto said on 2008-11-26, Mono's NUnit is for internal use
	  only, and installing nunit-docs.source causes an warning message
	  during monodoc startup.
	* docs/nunit-docs.source: Remove.

2009-02-03  Rodrigo Kumpera  <rkumpera@novell.com>

	* docs/Makefile: Fix install-local and uninstall-local if
	DISABLE_MCS_DOCS is defined.

2009-02-02  Rodrigo Kumpera  <rkumpera@novell.com>

	* docs/Makefile: Don't build build-documentation if DISABLE_MCS_DOCS
	is defined.

2009-01-31  Rodrigo Kumpera  <rkumpera@novell.com>

	* docs/Makefile: use -f with rm on the clean target so
	rm doesn't complain about missing files.

2008-12-10  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : remove sys.messaging from CENTUM_TESTS. It has never
	  been supported, and now, it's heavily developed.
