@@ -18,6 +18,10 @@ ifeq (net_2_0, $(PROFILE))
 INTERNAL_GMCS = $(RUNTIME) $(RUNTIME_FLAGS) $(topdir)/class/lib/$(BOOTSTRAP_PROFILE)/gmcs.exe
 endif
 
+ifeq (net_2_1_bootstrap, $(PROFILE))
+INTERNAL_GMCS = $(RUNTIME) $(RUNTIME_FLAGS) $(topdir)/class/lib/$(BOOTSTRAP_PROFILE)/gmcs.exe
+endif
+
 ifeq (2.1, $(FRAMEWORK_VERSION))
 LOCAL_MCS_FLAGS += -d:SMCS_SOURCE
 COMPILER_NAME = smcs
